--- a/projeto_final/fabio_mazza/projeto_final_modulos12_wweights.ipynb
+++ b/projeto_final/fabio_mazza/projeto_final_modulos12_wweights.ipynb
@@ -9495,13 +9495,28 @@
         "id": "aNATX8wRzHLu",
         "outputId": "0253f171-2714-47c8-a465-6fe26401b1c7"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0 steps; 0 examples so far; train loss: 5.4973, valid loss: 5.4131,                       train_loss1: 0.7052, train_loss2: 10.2894, valid_loss1: 0.6319, valid_loss2: 10.1944\n"
+            "0 steps; 0 examples so far; train loss: 5.4973, valid loss: 5.4131,                       train_loss1: 0.7052, train_loss2: 10.2894, valid_loss1: 0.6319, valid_loss2: 10.1944\n",
+            "1000 steps; 64000 examples so far; train loss: 3.5290, valid loss: 3.1987,                       train_loss1: 0.1060, train_loss2: 6.9520, valid_loss1: 0.0935, valid_loss2: 6.3039\n",
+            "2000 steps; 128000 examples so far; train loss: 3.2767, valid loss: 3.0867,                       train_loss1: 0.0872, train_loss2: 6.4662, valid_loss1: 0.0907, valid_loss2: 6.0827\n",
+            "3000 steps; 192000 examples so far; train loss: 3.1852, valid loss: 3.0061,                       train_loss1: 0.0801, train_loss2: 6.2903, valid_loss1: 0.0900, valid_loss2: 5.9221\n",
+            "4000 steps; 256000 examples so far; train loss: 3.1204, valid loss: 2.9569,                       train_loss1: 0.0729, train_loss2: 6.1678, valid_loss1: 0.0927, valid_loss2: 5.8210\n",
+            "5000 steps; 320000 examples so far; train loss: 3.0693, valid loss: 2.9182,                       train_loss1: 0.0663, train_loss2: 6.0723, valid_loss1: 0.0989, valid_loss2: 5.7375\n",
+            "6000 steps; 384000 examples so far; train loss: 3.0279, valid loss: 2.8812,                       train_loss1: 0.0612, train_loss2: 5.9945, valid_loss1: 0.1056, valid_loss2: 5.6567\n",
+            "7000 steps; 448000 examples so far; train loss: 2.9916, valid loss: 2.8444,                       train_loss1: 0.0565, train_loss2: 5.9267, valid_loss1: 0.1043, valid_loss2: 5.5845\n",
+            "8000 steps; 512000 examples so far; train loss: 2.9571, valid loss: 2.8184,                       train_loss1: 0.0505, train_loss2: 5.8638, valid_loss1: 0.1134, valid_loss2: 5.5234\n",
+            "9000 steps; 576000 examples so far; train loss: 2.9274, valid loss: 2.7952,                       train_loss1: 0.0462, train_loss2: 5.8085, valid_loss1: 0.1183, valid_loss2: 5.4720\n",
+            "10000 steps; 640000 examples so far; train loss: 2.8999, valid loss: 2.7779,                       train_loss1: 0.0430, train_loss2: 5.7569, valid_loss1: 0.1241, valid_loss2: 5.4318\n",
+            "11000 steps; 704000 examples so far; train loss: 2.8710, valid loss: 2.7601,                       train_loss1: 0.0392, train_loss2: 5.7027, valid_loss1: 0.1304, valid_loss2: 5.3898\n",
+            "12000 steps; 768000 examples so far; train loss: 2.8466, valid loss: 2.7413,                       train_loss1: 0.0359, train_loss2: 5.6573, valid_loss1: 0.1367, valid_loss2: 5.3459\n",
+            "13000 steps; 832000 examples so far; train loss: 2.8282, valid loss: 2.7340,                       train_loss1: 0.0337, train_loss2: 5.6227, valid_loss1: 0.1431, valid_loss2: 5.3248\n",
+            "14000 steps; 896000 examples so far; train loss: 2.8108, valid loss: 2.7174,                       train_loss1: 0.0318, train_loss2: 5.5899, valid_loss1: 0.1484, valid_loss2: 5.2864\n",
+            "15000 steps; 960000 examples so far; train loss: 2.7869, valid loss: 2.7089,                       train_loss1: 0.0293, train_loss2: 5.5445, valid_loss1: 0.1493, valid_loss2: 5.2684\n"
           ]
         }
       ]
@@ -9527,10 +9542,50 @@
         "model_2.load_state_dict(torch.load('/content/best_model2_parameters.pt'))"
       ],
       "metadata": {
-        "id": "nWLoNGgivEVN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nWLoNGgivEVN",
+        "outputId": "a21bd840-8101-4c7f-ef88-f9608cfaa686"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(len(validation_loader1), len(validation_loader2))\n",
+        "print(len(train_loader1), len(train_loader2))"
+      ],
+      "metadata": {
+        "id": "fPukanGIEtRD",
+        "outputId": "26201a5d-4fe2-4053-839d-142554acc989",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "39 1072\n",
+            "781 20911\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -9556,15 +9611,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "96dacc91-8bcc-44d4-e8b2-3ef5971570f5"
+        "outputId": "a9e53d4f-772b-4924-c3bd-64a2b0cef88e"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "test loss: 0.6898, test loss 1: 0.1525, test_loss2: 0.2127\n"
+            "test loss: 2.8285, test loss 1: 0.1499, test_loss2: 0.2120\n"
           ]
         }
       ]
@@ -9629,9 +9684,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 546
         },
-        "outputId": "c18cad63-335c-42c4-ed69-d0e188bc0fbe"
+        "outputId": "8735be75-ada9-4ebf-f48b-33dd6c755551"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9652,7 +9707,7 @@
             "Categorias - TARGET\n",
             "person ,  bicycle ,  motorcycle ,  traffic light ,  handbag ,  cell phone ,  building-other ,  metal ,  pavement ,  road ,  sky-other ,  skyscraper ,  tree ,  other ,  \n",
             " Categorias - Classificação do modelo\n",
-            "person ,  traffic light ,  building-other ,  clothes ,  fence ,  metal ,  pavement ,  road ,  sky-other ,  tree ,  other ,  "
+            "person ,  car ,  bus ,  traffic light ,  handbag ,  building-other ,  light ,  metal ,  pavement ,  road ,  sky-other ,  skyscraper ,  other ,  "
           ]
         }
       ]
@@ -9678,26 +9733,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yD8j5gePiiMr",
-        "outputId": "1c83650d-4db4-4d15-f986-d541efdda955"
+        "outputId": "3f973764-1acc-45e2-ab85-ba0224cebebf"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "of [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\n",
-            "of the [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\n",
-            "of the first [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\n",
-            "of the first first [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\n",
-            "of the first first first [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\n",
-            "of the first first first first [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\n",
-            "of the first first first first first [PAD] [PAD] [PAD] [PAD] [PAD]\n",
-            "of the first first first first first first [PAD] [PAD] [PAD] [PAD]\n",
-            "of the first first first first first first first [PAD] [PAD] [PAD]\n",
-            "of the first first first first first first first first [PAD] [PAD]\n",
-            "of the first first first first first first first first first [PAD]\n",
-            "of the first first first first first first first first first first\n"
+            "of, [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\n",
+            "of, and [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\n",
+            "of, and and [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\n",
+            "of, and and and [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\n",
+            "of, and and and and [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\n",
+            "of, and and and and and [PAD] [PAD] [PAD] [PAD] [PAD]\n",
+            "of, and and and and and and [PAD] [PAD] [PAD] [PAD]\n",
+            "of, and and and and and and and [PAD] [PAD] [PAD]\n",
+            "of, and and and and and and and and [PAD] [PAD]\n",
+            "of, and and and and and and and and and [PAD]\n",
+            "of, and and and and and and and and and and\n"
           ]
         }
       ]
@@ -9726,34 +9781,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_kIZw7YgnzOh",
-        "outputId": "6aeff99e-6055-4aa1-b0af-a7bda3bbcbfd"
+        "outputId": "bd9de704-eda6-4b0e-c4c7-1e0a6eb5a517"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "The first Seattle Open was held 86 years ago in 1936 at the\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time,\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time, and\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time, and the\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time, and the first\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time, and the first of\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time, and the first of the\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time, and the first of the first\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time, and the first of the first time\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time, and the first of the first time,\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time, and the first of the first time, and\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time, and the first of the first time, and the\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time, and the first of the first time, and the first\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time, and the first of the first time, and the first @\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time, and the first of the first time, and the first @ -\n",
-            "The first Seattle Open was held 86 years ago in 1936 at the end of the time, and the first of the first time, and the first @ - @\n"
+            "The first Seattle Open was held 86 years ago in 1936 at the time\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States,\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States, and\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States, and the\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States, and the first\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States, and the first of\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States, and the first of the\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States, and the first of the first\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States, and the first of the first time\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States, and the first of the first time in\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States, and the first of the first time in the\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States, and the first of the first time in the United\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States, and the first of the first time in the United States\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States, and the first of the first time in the United States,\n",
+            "The first Seattle Open was held 86 years ago in 1936 at the time of the United States, and the first of the first time in the United States, and\n"
           ]
         }
       ]
