--- a/projeto_final/fabio_mazza/projeto_final_modulos12_loss3.ipynb
+++ b/projeto_final/fabio_mazza/projeto_final_modulos12_loss3.ipynb
@@ -5582,8 +5582,9 @@
         "dim_feedforward = 1024\n",
         "n_linear = 1024\n",
         "\n",
-        "alpha = 0.5\n",
-        "beta = 0.5\n",
+        "alpha = 0.4\n",
+        "beta = 0.1\n",
+        "gamma = 0.5\n",
         "\n",
         "model_1 = MultiLabelClassifier(num_cats=num_cats).to(device)\n",
         "\n",
@@ -5605,74 +5606,87 @@
         "    model_1.zero_grad()\n",
         "    model_2.zero_grad()\n",
         "\n",
-        "    # Model #1\n",
+        "    # Model #1 loss\n",
         "    outputs1, inputs2_en = model_1(inputs1) #inputs2_en will be fed to the encoder of model #2\n",
         "    criterion1 = nn.BCEWithLogitsLoss()\n",
         "    loss1 = criterion1(outputs1, targets1)\n",
         "\n",
-        "    # Model #2\n",
+        "    # Model #2 loss\n",
         "    logits = model_2(inputs2_en, inputs2_de)\n",
         "    logits = logits.reshape(-1, logits.shape[-1])\n",
         "    targets2 = targets2.reshape(-1)\n",
         "    loss2 = nn.functional.cross_entropy(logits, targets2, ignore_index=model_2.pad_token_id)\n",
         "\n",
+        "    # Model #1/#2 integration loss\n",
+        "    criterion3 = nn.BCEWithLogitsLoss()\n",
+        "    loss3 = criterion3(outputs1, logits)\n",
+        "\n",
         "    # Combined loss and optimization\n",
-        "    loss = alpha * loss1 + beta * loss2\n",
+        "    loss = alpha * loss1 + beta * loss2 + gamma * loss3\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
         "\n",
-        "    return loss.item(), loss1.item(), loss2.item()\n",
+        "    return loss.item(), loss1.item(), loss2.item(), loss3.item\n",
         "\n",
         "\n",
         "def validation_step(inputs1, targets1, inputs2_de, targets2):\n",
         "    model_1.eval()\n",
         "    model_2.eval()\n",
         "    \n",
-        "    # Model #1\n",
+        "    # Model #1 loss\n",
         "    outputs1, inputs2_en = model_1(inputs1) #inputs2_en will be fed to the encoder of model #2\n",
         "    criterion1 = nn.BCEWithLogitsLoss()\n",
         "    loss1 = criterion1(outputs1, targets1)\n",
         "\n",
-        "    # Model #2\n",
+        "    # Model #2 loss\n",
         "    logits = model_2(inputs2_en, inputs2_de)\n",
         "    logits = logits.reshape(-1, logits.shape[-1])\n",
         "    targets2 = targets2.reshape(-1)\n",
         "    loss2 = nn.functional.cross_entropy(logits, targets2, ignore_index=model_2.pad_token_id)\n",
         "    \n",
-        "    # Combined loss\n",
-        "    loss = alpha * loss1 + beta * loss2\n",
+        "    # Model #1/#2 integration loss\n",
+        "    criterion3 = nn.BCEWithLogitsLoss()\n",
+        "    loss3 = criterion3(outputs1, logits)\n",
         "\n",
-        "    return loss.item(), loss1.item(), loss2.item()\n",
+        "    # Combined loss\n",
+        "    loss = alpha * loss1 + beta * loss2 + gamma * loss3\n",
+        "\n",
+        "    return loss.item(), loss1.item(), loss2.item(), loss3.item\n",
         "\n",
         "train_losses = []\n",
         "train_losses1 = []\n",
         "train_losses2 = []\n",
+        "train_losses3 = []\n",
         "n_examples = 0\n",
         "step = 0\n",
         "\n",
         "while n_examples < max_examples:\n",
         "    for (train_inputs1, train_targets1), (train_inputs2, train_targets2) in zip(train_loader1, train_loader2): \n",
-        "        loss, loss1, loss2 = train_step(train_inputs1.to(device), train_targets1.to(device), train_inputs2.to(device), train_targets2.to(device)) \n",
+        "        loss, loss1, loss2, loss3 = train_step(train_inputs1.to(device), train_targets1.to(device), train_inputs2.to(device), train_targets2.to(device)) \n",
         "        train_losses.append(loss)\n",
         "        train_losses1.append(loss1)\n",
         "        train_losses2.append(loss2)\n",
+        "        train_losses3.append(loss3)\n",
         "\n",
         "        if step % eval_every_steps == 0:\n",
         "            train_loss = np.average(train_losses)\n",
         "            train_loss1 = np.average(train_losses1)\n",
         "            train_loss2 = np.average(train_losses2)\n",
+        "            train_loss3 = np.average(train_losses3)\n",
         "            \n",
         "            valid_loss = 0\n",
         "            valid_loss1 = 0\n",
         "            valid_loss2 = 0\n",
+        "            valid_loss3 = 0\n",
         "            best_valid_loss = np.inf\n",
         "\n",
         "            with torch.no_grad():\n",
         "                for (val_inputs1, val_targets1), (val_inputs2, val_targets2) in zip(validation_loader1, validation_loader2):\n",
-        "                    valid_step_loss, valid_step_loss1, valid_step_loss2 = validation_step(val_inputs1.to(device), val_targets1.to(device), val_inputs2.to(device), val_targets2.to(device))\n",
+        "                    valid_step_loss, valid_step_loss1, valid_step_loss2, valid_step_loss3 = validation_step(val_inputs1.to(device), val_targets1.to(device), val_inputs2.to(device), val_targets2.to(device))\n",
         "                    valid_loss += valid_step_loss/min(len(validation_loader1), len(validation_loader2))\n",
         "                    valid_loss1 += valid_step_loss1/min(len(validation_loader1), len(validation_loader2))\n",
         "                    valid_loss2 += valid_step_loss2/min(len(validation_loader1), len(validation_loader2))\n",
+        "                    valid_loss3 += valid_step_loss3/min(len(validation_loader1), len(validation_loader2))\n",
         "\n",
         "                    if valid_loss < best_valid_loss:\n",
         "                        torch.save(model_1.state_dict(), 'best_model1_parameters.pt')\n",
@@ -5680,14 +5694,17 @@
         "                        print('Best models parameters saved.')\n",
         "\n",
         "\n",
-        "            print(f'{step} steps; {n_examples} examples so far; train loss: {train_loss:.4f}, valid loss: {valid_loss:.4f}, \\\n",
-        "                      train_loss1: {train_loss1:.4f}, train_loss2: {train_loss2:.4f}, valid_loss1: {valid_loss1:.4f}, valid_loss2: {valid_loss2:.4f}')\n",
+        "            print(f'{step} steps; {n_examples} examples so far; TRAIN LOSS: {train_loss:.4f}, VALID LOSS: {valid_loss:.4f}, \\n \\\n",
+        "              train_loss1: {train_loss1:.4f}, train_loss2: {train_loss2:.4f}, train_loss3: {train_loss3:.4f} \\n \\\n",
+        "              valid_loss1: {valid_loss1:.4f}, valid_loss2: {valid_loss2:.4f}, valid_loss3: {valid_loss3:.4f}')\n",
         "            \n",
         "            train_losses = []\n",
         "            train_losses1 = []\n",
         "            train_losses2 = []\n",
+        "            train_losses3 = []\n",
         "\n",
-        "        wandb.log({'train loss:': train_loss, 'valid loss:': valid_loss, 'train_loss1:': train_loss1, 'train_loss2:': train_loss2, 'valid_loss1:': valid_loss1, 'valid_loss2:': valid_loss2})\n",
+        "        wandb.log({'train loss:': train_loss, 'valid loss:': valid_loss, 'train_loss1:': train_loss1, 'train_loss2:': train_loss2, 'train_loss3:': train_loss3, \n",
+        "            'valid_loss1:': valid_loss1, 'valid_loss2:': valid_loss2, 'valid_loss3:':valid_loss3})\n",
         "\n",
         "        n_examples += len(train_inputs1)  # Increment of batch size\n",
         "        step += 1\n",
